# vision-lab

./: CMakeLists.txt  CameraImageProvider.cpp  CameraImageProvider.h  CameraImageProviderr.cpp  CameraManager.cpp  CameraManager.h  CameraView.qml  FaceDetector.cpp  FaceDetector.h  LICENSE  Main.qml  ObjectDetector.cpp  ObjectDetector.h  README.md  TextRecognizer.cpp  TextRecognizer.h  TitleBar.qml  VisionController.cpp  VisionController.h  WindowController.cpp  WindowController.h  main.cpp
controllers/: VisionController.cpp  VisionController.h  WindowController.cpp
data/: slim.onnx
detectors/: FaceDetector.cpp  MotionDetector.cpp  MotionDetector.h  ObjectDetector.cpp  TextRecognizer.cpp  TextRecognizer.h
utilities/: CameraManager.cpp  CameraManager.h
views/: CameraView.qml  ControlButton.qml  Main.qml  TitleBar.qml
